# cmake

cmake_1/: CMakeLists.txt  main.cpp  print_lib.cpp
cmake_2/: CMakeLists.txt
cmake_2/app/: CMakeLists.txt
cmake_2/src/: CMakeLists.txt
cmake_3/: CMakeLists.txt  Makefile
cmake_3/src/: CMakeLists.txt
cmake_4/app/: CMakeLists.txt
cmake_5/: CMakeLists.txt
cmake_5/app/: CMakeLists.txt  main.cpp
cmake_5/configured/: config.hpp.in
cmake_5/src/: CMakeLists.txt
cmake_5/src/include/: CMakeLists.txt  print_lib.hpp
